--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,7 @@ jobs:
                     tlmgr init-usertree
                     tlmgr install enumitem appendix tcolorbox pgf environ trimspaces nag
             - checkout
-            - run:
-                name: Generate PDF
-                command: |
-                    pdflatex main.tex
-                    pdflatex main.tex
+            - run: make build
             - persist_to_workspace:
                 root: '.'
                 paths:
